Bug fix: swipeAway android overflow

--- a/public/stylesheets/style.less
+++ b/public/stylesheets/style.less
@@ -492,6 +492,7 @@ body{
   -webkit-transform: translate3d(0,0,0);
   margin-left:1px;
   text-align: center;
+  z-index:1;
 }
 .swipeCover h1{
   margin-top:8px;
@@ -507,6 +508,7 @@ body{
   display: inline-block;
   overflow: hidden;
   opacity: 1;
+  z-index:2;
 }
 
 .swipeEl.transition{
